--- a/client/src/components/MessageArea/MessageArea.module.css
+++ b/client/src/components/MessageArea/MessageArea.module.css
@@ -1,6 +1,24 @@
 .container {
     width: 100%;
     height: 20vh;
-    background-color: khaki;
-    border: 1px solid lightgrey;
+}
+
+.text { 
+    height: 80%;
+    border: none;
+    border-radius: 2px;
+    flex-grow: 1;
+}
+.form {
+    display: flex;
+}
+
+.send-btn {
+    background-color: blueviolet;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
 }
